[gd_scene load_steps=5 format=3 uid="uid://b2ss70sycqptk"]

[ext_resource type="Script" uid="uid://cp3vg8h3r1wei" path="res://scripts/world/prisoner_statue.gd" id="1_m2rt5"]
[ext_resource type="ArrayMesh" uid="uid://p87skbagjcro" path="res://assets/world/prisoner_statueV2.vox" id="2_m2rt5"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kb52u"]
points = PackedVector3Array(-1.4001958, 0, -2.2, -2.2, 0, -1.4001958, -2.0001566, 3.0999608, -2.0001566, -1.4001958, 0.099686764, -2.2, 1.3997653, 0, -2.2, -2.2, 0, 1.3997653, -2.2, 0.099686764, -1.4001958, -2.0001566, 3.399765, -2.0001566, 1.3997653, 0.099686764, -2.2, 1.999726, 3.0999608, -2.0001566, 2.2, 0, -1.4001958, -2.0001566, 3.0999608, 1.999726, -2.2, 0.099686764, 1.3997653, -1.4001958, 0, 2.2, -2.0001566, 3.399765, 1.999726, -1.9002349, 3.5998826, -1.9002349, 1.999726, 3.399765, -2.0001566, 2.2, 0.099686764, -1.4001958, 2.2, 0, 1.3997653, -1.4001958, 0.099686764, 2.2, 1.3997653, 0, 2.2, -1.9002349, 3.5998826, 1.8998044, 1.999726, 3.399765, 1.999726, -1.8003132, 3.6999414, -1.8003132, 1.8998044, 3.5998826, -1.9002349, 2.2, 0.099686764, 1.3997653, 1.999726, 3.0999608, 1.999726, 1.3997653, 0.099686764, 2.2, -1.8003132, 3.6999414, 1.7998827, 1.8998044, 3.5998826, 1.8998044, -1.7003915, 3.799628, -1.7003915, 1.7998827, 3.6999414, -1.8003132, -1.7003915, 3.799628, 1.699961, 1.7998827, 3.6999414, 1.7998827, 1.699961, 3.799628, -1.7003915, 1.699961, 3.799628, 1.699961)

[sub_resource type="BoxShape3D" id="BoxShape3D_1oyes"]
size = Vector3(3, 1, 3)

[node name="PrisonerStatue" type="Node3D"]
script = ExtResource("1_m2rt5")

[node name="PrisonerStatue" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_m2rt5")

[node name="StaticBody3D" type="StaticBody3D" parent="PrisonerStatue"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PrisonerStatue/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_kb52u")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.2, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_1oyes")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
